--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Packages/ssj100_CVT_
 PackageSources/SimObjects/Airplanes/SU95/sound/sound.cfg
 Packages/SSJ100/en-US.locPak
 spreadsheet_calc/~$Su95_calc.ods
+_PackageInt
