--- a/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
@@ -29,13 +29,24 @@ empty_weight_yaw_MOI = 637000 ; Empty yaw moment of inertia, Jyy (SLUG SQ FEET)
 empty_weight_coupled_MOI = 1000 ; Empty transverse moment of inertia, Jyz (SLUG SQ FEET)
 activate_mach_limit_based_on_cg = 0 ; Activate mach limitation depending on CG position (true if > 0 /false othewise). Mostly for Concorde).
 activate_cg_limit_based_on_mach = 0 ; Activate cg limitation depending on mach value (true if > 0 /false othewise). Mostly for Concorde).
-max_number_of_stations = 6 ; Number of payload stations
-station_load.0 = 170, 29.1, -1.8, 0, TT:MENU.PAYLOAD.PILOT, 1 ;
-station_load.1 = 170, 29.1, 1.8, 0, TT:MENU.PAYLOAD.COPILOT, 2 ;
-station_load.2 = 4000, 4.5, 0, 0, TT:MENU.PAYLOAD.FORWARD_ECONOMY, 0 ;
-station_load.3 = 4000, -21, 0, 0, TT:MENU.PAYLOAD.REAR_ECONOMY, 0 ;
-station_load.4 = 1200, 3.5, 0, -4.6, TT:MENU.PAYLOAD.FORWARD_BAGGAGE, 0 ;
-station_load.5 = 1000, -19, 0, -4.6, TT:MENU.PAYLOAD.REAR_BAGGAGE, 0 ;
+max_number_of_stations = 10 ; Number of payload stations
+station_load.0 = 185, 29.1, -1.8, 0, PILOT, 1
+station_load.1 = 185, 29.1, 1.8, 0, FIRST OFFICER, 2
+station_load.2 = 2000, 4.5, 0, 0, ECONOMY ROWS 1-5 (seats: 36 max: 6670lbs/3024kg), 0
+station_load.3 = 2000, 4.5, 0, 0, ECONOMY ROWS 6-10 (seats: 42 max: 7780lb/3530kg), 0
+station_load.4 = 2000, -21, 0, 0, ECONOMY ROWS 11-15 (seats: 48 max: 8880lb/4032kg), 0
+station_load.5 = 2000, -21, 0, 0, ECONOMY ROWS 16-20 (seats: 48 max: 8880lb/4032kg), 0
+station_load.6 = 1200, 3.5, 0, -4.6, FWD BAGGAGE/CONTAINER (max: 7500lb/3402kg), 0
+station_load.7 = 0, -19, 0, -4.6, AFT CONTAINER (max: 5350lb/2426kg), 0
+station_load.8 = 500, -19, 0, -4.6, AFT BAGGAGE (max: 4650lb/2110kg), 0
+station_load.9 = 500, -19, 0, -4.6, AFT BULK/LOOSE (max: 3300lb/1497kg), 0
+
+;; station_load.0 = 170, 29.1, -1.8, 0, TT:MENU.PAYLOAD.PILOT, 1 ;
+;; station_load.1 = 170, 29.1, 1.8, 0, TT:MENU.PAYLOAD.COPILOT, 2 ;
+;; station_load.2 = 4000, 4.5, 0, 0, TT:MENU.PAYLOAD.FORWARD_ECONOMY, 0 ;
+;; station_load.3 = 4000, -21, 0, 0, TT:MENU.PAYLOAD.REAR_ECONOMY, 0 ;
+;; station_load.4 = 1200, 3.5, 0, -4.6, TT:MENU.PAYLOAD.FORWARD_BAGGAGE, 0 ;
+;; station_load.5 = 1000, -19, 0, -4.6, TT:MENU.PAYLOAD.REAR_BAGGAGE, 0 ;
 
 [CONTACT_POINTS]
 static_pitch = 0.0 ; degrees, pitch when at rest on the ground (+=Up, -=Dn)
