--- a/PackageSources/SimObjects/Airplanes/SU95/panel/panel.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/panel/panel.cfg
@@ -122,7 +122,7 @@ size_mm=1430,1000
 pixel_size=1430,1000
 texture=$EFB
 
-htmlgauge00=A32NX_SU95/EFB/template.html, 0,0,1430,1000
+htmlgauge00=A32NX_SU95/EFB_SU95/template.html, 0,0,1430,1000
 
 [VCockpit17]
 size_mm=0,0
@@ -139,7 +139,7 @@ size_mm				= 2048,512
 texture				= $RegistrationNumber
 location 			= exterior
 
-painting00=Registration/Registration.html?font_color=black,	0, 0, 2048, 512
+painting00=A32NX-SU95_Registration/Registration.html,	0, 0, 2048, 512
 
 [VPainting02]
 size_mm=1024,1024
