--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 Packages/SSJ100/SimObjects
 Packages/SSJ100/ModelBehaviorDefs
 Packages/SSJ100/html_ui
+Packages/SSJ100/effects
 Packages/ssj100_CVT_
 PackageSources/SimObjects/Airplanes/SU95/sound/sound.cfg
 Packages/SSJ100/en-US.locPak
