--- a/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
@@ -186,7 +186,7 @@ wing_thickness_ratio = 0.02 ; Local thickness is local_chord(x)*wing_thickness_r
 wing_dihedral = 4.4 ; Dihedral angle Lambda (DEGREES)
 wing_incidence = 2 ; Wing incidence (DEGREES)
 wing_twist = -2 ; Wing twist epsilon (DEGREES)
-oswald_efficiency_factor = 0.721 ; Wing Oswald efficiency factor e (non dimensional)
+oswald_efficiency_factor = 0.73 ; Wing Oswald efficiency factor e (non dimensional) ; increase wing efficency from 0.712
 wing_winglets_flag = 1 ; Has winglets true/false
 wing_sweep = 25 ; Wing sweep (DEGREES)
 wing_pos_apex_lon = 7.409128 ; Longitudinal (z) position of wing apex w.r.t reference datum (FEET)
@@ -250,9 +250,9 @@ lift_coef_delta_elevator = -0.288086 ; The change in lift per change in elevator
 lift_coef_horizontal_incidence = 0 ; The change in lift per change in horizontal incidence angle
 lift_coef_flaps = 1.715 ; Change in lift due to flaps
 lift_coef_spoilers = -0.25 ; Change in lift due to spoilers- Full extension at MMO/VMO -0.34, at M0.90 0, Ground spoilers -0.60, Partial ground spoilers -0.425
-drag_coef_zero_lift = 0.022 ; The zero lift drag polar
-drag_coef_flaps = 0.0683
-drag_coef_gear = 0.030
+drag_coef_zero_lift = 0.0195 ; The zero lift drag polar ; reduced slightly from 0.022
+drag_coef_flaps = 0.06
+drag_coef_gear = 0.025
 drag_coef_spoilers = 0.020; Full extension at MMO/VMO 0.032, at M 0.90 0, Ground spoilers 0.080, Partial ground spoilers 0.05
 side_force_slip_angle = -1.227 ; (yaw angle) The change in side force per change in side slip angle
 side_force_roll_rate = 1.833 ; (roll velocity)  The change in side force per change in roll rate
