--- a/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
@@ -30,8 +30,8 @@ empty_weight_coupled_MOI = 1000 ; Empty transverse moment of inertia, Jyz (SLUG 
 activate_mach_limit_based_on_cg = 0 ; Activate mach limitation depending on CG position (true if > 0 /false othewise). Mostly for Concorde).
 activate_cg_limit_based_on_mach = 0 ; Activate cg limitation depending on mach value (true if > 0 /false othewise). Mostly for Concorde).
 max_number_of_stations = 10 ; Number of payload stations
-station_load.0 = 185, 29.1, -1.8, 0, PILOT, 1
-station_load.1 = 185, 29.1, 1.8, 0, FIRST OFFICER, 2
+station_load.0 = 185, 29.1, -1.8, 0, PILOT
+station_load.1 = 185, 29.1, 1.8, 0, FIRST OFFICER
 station_load.2 = 2000, 4.5, 0, 0, ECONOMY ROWS 1-5 (seats: 36 max: 6670lbs/3024kg), 0
 station_load.3 = 2000, 4.5, 0, 0, ECONOMY ROWS 6-10 (seats: 42 max: 7780lb/3530kg), 0
 station_load.4 = 2000, -21, 0, 0, ECONOMY ROWS 11-15 (seats: 48 max: 8880lb/4032kg), 0
