--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,10 @@
     {
       "label": "Setup",
       "type": "shell",
-      "command": "${workspaceFolder}/docker-env/run.sh",
+      "command": "${workspaceFolder}/scripts/dev-env/run.sh",
       "args": ["./scripts/setup.sh"],
       "windows": {
-        "command": "${workspaceFolder}/docker-env/run.cmd",
+        "command": "${workspaceFolder}/scripts/dev-env/run.cmd",
         "args": ["./scripts/setup.sh"]
       },
       "options": {
@@ -22,10 +22,10 @@
     {
       "label": "Build",
       "type": "shell",
-      "command": "${workspaceFolder}/docker-env/run.sh",
+      "command": "${workspaceFolder}/scripts/dev-env/run.sh",
       "args": ["./scripts/build.sh"],
       "windows": {
-        "command": "${workspaceFolder}/docker-env/run.cmd",
+        "command": "${workspaceFolder}/scripts/dev-env/run.cmd",
         "args": ["./scripts/build.sh"]
       },
       "options": {
