--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# Ensure LF for shell files, even on Windows, so that bash inside Docker does not panic
+*.sh text eol=lf
