broken, do not use/

--- a/PackageSources/SimObjects/Airplanes/SU95/model/model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/model/model.cfg
@@ -9,5 +9,5 @@ withInterior_forceFirstLod=true
 withInterior_showExterior=false
 
 [models]
-exterior=SSJ100.mdl
-interior=SU95_internal.xml
+exterior = node0.xml;SSJ100.mdl
+interior = SU95_internal.xml
