light and callsign fix

--- a/PackageSources/SimObjects/Airplanes/SU95/aircraft.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/aircraft.cfg
@@ -7,8 +7,8 @@ minor =0
 [GENERAL]
 
 ; LEGACY
-atc_type = "TT:ATCCOM.ATC_NAME_SUKHOI.0.text"
-atc_model = "TT:ATCCOM.AC_MODEL_SU95.0.text"
+atc_type = "TT:ATCCOM.ATC_NAME SUKHOI.0.text"
+atc_model = "TT:ATCCOM.AC_MODEL SU95.0.text"
 editable = 1 ;
 performance ="Velocidad de crucero:   477 nudos (885 km\/h)   \nMotores:   SAM-146 with 17,270 lbs max thrust   \nAlcance m?ximo:    2390 mn (4420 km)    \nTecho de servicio:    41000 pies (12500 m)    \nCapacidad de combustible:    3500 U.S. galons (10681 kg)    \nPeso en vac?o:    55000 lb (25000 kg)    \nPeso bruto m?ximo:    105000 lbs (47727 kg)    \nLargo:   98,23 pies (29,94 m)    \nEnvergadura:    91,20 pies (27,8 m)    \nAlto:    33,73 pies (10,28 m)    \nPlazas:    Asientos 98 (Standard single class)    \nCapacidad de carga:    775,8 pies3 (21,97 m3)"
 category = "airplane" ;
