--- a/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
@@ -12,6 +12,8 @@
 ; 06Jun2021 Increased landing gear drag increment. Reduced flap drag increment to retain same drag level with both flaps
 ; and gear deployed. Added comments regarding spoiler lift/drag increments for different configurations.
 
+;SSJ Modification note: Passenger weight is 85 kg
+
 [VERSION]
 major = 1
 minor = 0
@@ -23,23 +25,23 @@ reference_datum_position = 5, 0, 4.92 ; Position of reference datum relative to 
 empty_weight_CG_position = -5.66, 0, -6 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y
 CG_forward_limit = 0.125 ; Gravity center forward limit (longitudinal offset) for longitudinal stability
 CG_aft_limit = 0.3 ; Gravity center after limit (longitudinal offset z) w.r.t reference datum for longitudinal stability (FEET)
-empty_weight_pitch_MOI = 652000 ; Empty pitch moment of inertia, Jxx (SLUG SQ FEET)
-empty_weight_roll_MOI = 243000 ; Empty roll moment of inertia, Jzz (SLUG SQ FEET)
-empty_weight_yaw_MOI = 637000 ; Empty yaw moment of inertia, Jyy (SLUG SQ FEET)
+empty_weight_pitch_MOI = 528350 ; Empty pitch moment of inertia, Jxx (SLUG SQ FEET)
+empty_weight_roll_MOI = 285869 ; Empty roll moment of inertia, Jzz (SLUG SQ FEET)
+empty_weight_yaw_MOI = 574932 ; Empty yaw moment of inertia, Jyy (SLUG SQ FEET)
 empty_weight_coupled_MOI = 1000 ; Empty transverse moment of inertia, Jyz (SLUG SQ FEET)
 activate_mach_limit_based_on_cg = 0 ; Activate mach limitation depending on CG position (true if > 0 /false othewise). Mostly for Concorde).
 activate_cg_limit_based_on_mach = 0 ; Activate cg limitation depending on mach value (true if > 0 /false othewise). Mostly for Concorde).
 max_number_of_stations = 10 ; Number of payload stations
-station_load.0 = 185, 29.1, -1.8, 0, PILOT
-station_load.1 = 185, 29.1, 1.8, 0, FIRST OFFICER
-station_load.2 = 2000, 4.5, 0, 0, ECONOMY ROWS 1-5 (seats: 36 max: 6670lbs/3024kg), 0
-station_load.3 = 2000, 4.5, 0, 0, ECONOMY ROWS 6-10 (seats: 42 max: 7780lb/3530kg), 0
-station_load.4 = 2000, -21, 0, 0, ECONOMY ROWS 11-15 (seats: 48 max: 8880lb/4032kg), 0
-station_load.5 = 2000, -21, 0, 0, ECONOMY ROWS 16-20 (seats: 48 max: 8880lb/4032kg), 0
-station_load.6 = 1200, 3.5, 0, -4.6, FWD BAGGAGE/CONTAINER (max: 7500lb/3402kg), 0
-station_load.7 = 0, -19, 0, -4.6, AFT CONTAINER (max: 5350lb/2426kg), 0
-station_load.8 = 500, -19, 0, -4.6, AFT BAGGAGE (max: 4650lb/2110kg), 0
-station_load.9 = 500, -19, 0, -4.6, AFT BULK/LOOSE (max: 3300lb/1497kg), 0
+station_load.0 = 1, 29.1, -1.8, 0, PILOT
+station_load.1 = 1, 29.1, 1.8, 0, FIRST OFFICER
+station_load.2 = 2155, 4.5, 0, 0, ECONOMY ROWS 1-5 (seats: 23 max: 4310lbs/1955kg), 0
+station_load.3 = 2342, 4.5, 0, 0, ECONOMY ROWS 6-10 (seats: 25 max: 4685lb/2125kg), 0
+station_load.4 = 2342, -21, 0, 0, ECONOMY ROWS 11-15 (seats: 25 max: 4685lb/2125kg), 0
+station_load.5 = 2342, -21, 0, 0, ECONOMY ROWS 16-20 (seats: 25 max: 4685lb/2125kg), 0
+station_load.6 = 1200, 3.5, 0, -4.6, FWD BAGGAGE (max: 4292lb/1947kg), 0
+station_load.7 = 0, -19, 0, -4.6, AFT BAGGAGE 1 (max: 1279lb/580kg), 0
+station_load.8 = 500, -19, 0, -4.6, AFT BAGGAGE 2 (max: 2674lb/1213kg), 0
+station_load.9 = 500, -19, 0, -4.6, AFT BULK/LOOSE (max: 1014lb/460kg), 0
 
 ;; station_load.0 = 170, 29.1, -1.8, 0, TT:MENU.PAYLOAD.PILOT, 1 ;
 ;; station_load.1 = 170, 29.1, 1.8, 0, TT:MENU.PAYLOAD.COPILOT, 2 ;
@@ -170,12 +172,12 @@ Pump.4 = Name:CenterTankPump2#Pressure:29#DestinationLine:PumpCenter2ToJuncRight
 Pump.5 = Name:LeftInnerTankPump2#Pressure:25#DestinationLine:PumpLeft2ToJuncLeft#TankFuelRequired:LeftInner#Type:Electric#Index:5
 Pump.6 = Name:RightInnerTankPump2#Pressure:25#DestinationLine:PumpRight2ToJuncRight#TankFuelRequired:RightInner#Type:Electric#Index:6
 Pump.7 = Name:APUPump#Pressure:5#DestinationLine:Pump6ToAPUValve#TankFuelRequired:LeftInner#Type:APUDriven
-Trigger.1 = Target:LeftInner#Threshold:239#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2
-Trigger.2 = Target:RightInner#Threshold:239#Condition:TankQuantityBelow#EffectTrue:OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
+Trigger.1 = Target:LeftInner#Threshold:120#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2
+Trigger.2 = Target:RightInner#Threshold:120#Condition:TankQuantityBelow#EffectTrue:OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
 Trigger.3 = Condition:Autostart_Enabled#EffectTrue:OpenValve.LeftEngineValve,OpenValve.RightEngineValve,OpenValve.CrossFeedValve,OpenValve.APUValve,StartPump.CenterTankPump1,StartPump.LeftInnerTankPump1,StartPump.RightInnerTankPump1,StartPump.CenterTankPump2,StartPump.LeftInnerTankPump2,StartPump.RightInnerTankPump2,StartPump.APUPump
 Trigger.4 = Condition:Autoshutdown_Enabled#EffectTrue:CloseValve.LeftEngineValve,CloseValve.RightEngineValve,CloseValve.CrossFeedValve,CloseValve.APUValve,StopPump.CenterTankPump1,StopPump.LeftInnerTankPump1,StopPump.RightInnerTankPump1,StopPump.CenterTankPump2,StopPump.LeftInnerTankPump2,StopPump.RightInnerTankPump2
-Trigger.5 = Target:LeftInner#Threshold:468#Condition:TankQuantityBelow#EffectFalse:CloseValve.LeftTransferValve1,CloseValve.LeftTransferValve2
-Trigger.6 = Target:RightInner#Threshold:468#Condition:TankQuantityBelow#EffectFalse:CloseValve.RightTransferValve1,CloseValve.RightTransferValve2
+Trigger.5 = Target:LeftInner#Threshold:226#Condition:TankQuantityBelow#EffectFalse:CloseValve.LeftTransferValve1,CloseValve.LeftTransferValve2
+Trigger.6 = Target:RightInner#Threshold:226#Condition:TankQuantityBelow#EffectFalse:CloseValve.RightTransferValve1,CloseValve.RightTransferValve2
 
 [AIRPLANE_GEOMETRY]
 wing_area = 902 ; Wing area S (SQUARE FEET)
@@ -287,7 +289,7 @@ yaw_moment_delta_rudder_trim_scalar = 1.055 ; Change in yaw moment due to rudder
 compute_aero_center = 0
 aero_center_lift = -1.6 ; Init to center
 lift_coef_aoa_table = -3.15:0, 0:0.125, 0.139:1.205, 0.2:1.313, 0.26:1.55, 0.29:1.5, 0.32:1.45, 0.5:1.40, 3.15:0
-lift_coef_ground_effect_mach_table = 0.0:1.20, 1.0:1.20
+lift_coef_ground_effect_mach_table = 0.0:1.178, 0.15:1.178, 0.19:1.178, 0.20:1.176, 0.22:1.173, 0.25:1.17, 0.27:1.1675, 0.30:1.164, 0.35:1.159, 1.0:1
 lift_coef_mach_table = 0:1
 lift_coef_delta_elevator_mach_table = 0:0
 lift_coef_daoa_mach_table = 0:0
@@ -352,7 +354,7 @@ aileron_effectiveness = 1
 rudder_effectiveness = 0.21
 rudder_maxangle_scalar = 1
 pitch_stability = 0.25
-roll_stability = 0.25
+roll_stability = 0.65
 yaw_stability = 0.15
 pitch_gyro_stability = 6
 roll_gyro_stability = 1
@@ -387,9 +389,9 @@ cruise_alt = 36000 ; (ft)
 takeoff_speed = 115 ; Takeoff Speed (Kts)
 spawn_cruise_altitude = 5000 ; Spawn Cruise Altitude (ft)
 spawn_descent_altitude = 500 ; Spawn Descent Altitude (ft)
-best_angle_climb_speed = 0 ; Best angle climb speed (Kts)
-approach_speed = 0 ; Approach speed (Kts)
-best_glide = 0 ; Best Glide (Kts)
+best_angle_climb_speed = 180 ; Best angle climb speed (Kts)
+approach_speed = 140 ; Approach speed (Kts)
+best_glide = 215 ; Best Glide (Kts)
 max_gear_extended = 280 ; (Kts)
 
 [INTERACTIVE POINTS]
@@ -471,5 +473,5 @@ flaps-position.0 =  0.00,  -1, 1.00, 1.00 ; CONF 0
 flaps-position.1 = 18.00, 250, 0.65, 1.00 ; CONF 1
 flaps-position.2 = 18.01, 210, 0.72, 1.00 ; CONF 1+F
 flaps-position.3 = 24.00, 200, 1.05, 1.00 ; CONF 2
-flaps-position.4 = 24.01, 190, 1.09, 1.00 ; CONF 3
+flaps-position.4 = 24.00, 190, 1.09, 1.00 ; CONF 3
 flaps-position.5 = 24.00, 180, 1.00, 1.00 ; CONF FULL
