--- a/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
@@ -14,6 +14,11 @@
 
 ;SSJ Modification note: Passenger weight is 85 kg
 
+
+
+
+
+
 [VERSION]
 major = 1
 minor = 0
@@ -22,6 +27,7 @@ minor = 0
 max_gross_weight = 109019 ; Empty weight, (LBS)
 empty_weight = 53460 ; Empty weight, (LBS)
 reference_datum_position = 5, 0, 4.92 ; Position of reference datum relative to FS(0,0,0) (FEET), z, x, y
+
 empty_weight_CG_position = -5.66, 0, -6 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y
 CG_forward_limit = 0.125 ; Gravity center forward limit (longitudinal offset) for longitudinal stability
 CG_aft_limit = 0.3 ; Gravity center after limit (longitudinal offset z) w.r.t reference datum for longitudinal stability (FEET)
@@ -31,17 +37,28 @@ empty_weight_yaw_MOI = 574932 ; Empty yaw moment of inertia, Jyy (SLUG SQ FEET)
 empty_weight_coupled_MOI = 1000 ; Empty transverse moment of inertia, Jyz (SLUG SQ FEET)
 activate_mach_limit_based_on_cg = 0 ; Activate mach limitation depending on CG position (true if > 0 /false othewise). Mostly for Concorde).
 activate_cg_limit_based_on_mach = 0 ; Activate cg limitation depending on mach value (true if > 0 /false othewise). Mostly for Concorde).
+
+
+
+
+
+
+
+
+
+
+
 max_number_of_stations = 10 ; Number of payload stations
-station_load.0 = 1, 29.1, -1.8, 0, PILOT
-station_load.1 = 1, 29.1, 1.8, 0, FIRST OFFICER
-station_load.2 = 2155, 4.5, 0, 0, ECONOMY ROWS 1-5 (seats: 23 max: 4310lbs/1955kg), 0
-station_load.3 = 2342, 4.5, 0, 0, ECONOMY ROWS 6-10 (seats: 25 max: 4685lb/2125kg), 0
-station_load.4 = 2342, -21, 0, 0, ECONOMY ROWS 11-15 (seats: 25 max: 4685lb/2125kg), 0
-station_load.5 = 2342, -21, 0, 0, ECONOMY ROWS 16-20 (seats: 25 max: 4685lb/2125kg), 0
-station_load.6 = 1200, 3.5, 0, -4.6, FWD BAGGAGE (max: 4292lb/1947kg), 0
-station_load.7 = 0, -19, 0, -4.6, AFT BAGGAGE 1 (max: 1279lb/580kg), 0
-station_load.8 = 500, -19, 0, -4.6, AFT BAGGAGE 2 (max: 2674lb/1213kg), 0
-station_load.9 = 500, -19, 0, -4.6, AFT BULK/LOOSE (max: 1014lb/460kg), 0
+station_load.0 = 2155, 13.5, 0, 0, ECONOMY ROWS 1-5 (seats: 23 max: 4310lbs/1955kg), 0
+station_load.1 = 2342, 13.5, 0, 0, ECONOMY ROWS 6-10 (seats: 25 max: 4685lb/2125kg), 0
+station_load.2 = 2342, -20, 0, 0, ECONOMY ROWS 11-15 (seats: 25 max: 4685lb/2125kg), 0
+station_load.3 = 2342, -20, 0, 0, ECONOMY ROWS 16-20 (seats: 25 max: 4685lb/2125kg), 0
+station_load.4 = 1200, 12.5, 0, -4.6, FWD BAGGAGE (max: 4292lb/1947kg), 0
+station_load.5 = 0, -18, 0, -4.6, AFT BAGGAGE 1 (max: 1279lb/580kg), 0
+station_load.6 = 500, -18, 0, -4.6, AFT BAGGAGE 2 (max: 2674lb/1213kg), 0
+station_load.7 = 500, -18, 0, -4.6, AFT BULK/LOOSE (max: 1014lb/460kg), 0
+station_load.8 = 1, 29.1, -1.8, 0, PILOT
+station_load.9 = 1, 29.1, 1.8, 0, FIRST OFFICER
 
 ;; station_load.0 = 170, 29.1, -1.8, 0, TT:MENU.PAYLOAD.PILOT, 1 ;
 ;; station_load.1 = 170, 29.1, 1.8, 0, TT:MENU.PAYLOAD.COPILOT, 2 ;
@@ -65,11 +82,25 @@ max_speed_full_steering_castering = 300 ; Defines the speed under which the full
 max_speed_decreasing_steering_castering = 350 ; Defines the speed above which the angle of steering stops decreasing for free castering wheels  (in feet/second).
 min_castering_angle = 0.05236 ; Defines the minimum angle a free castering wheel can take (in radians).
 max_castering_angle = 1.0 ; Defines the maximum angle a free castering wheel can take (in radians).
+
 ;-        0,     1,     2,      3,      4, 5,   6,  7,     8,   9,   10
 point.0 = 1, 28.95,     0,  -11.7,   1000, 0,   1, 40,  0.63, 1.3, 0.85, 4, 4, 0, 216, 256, 3 ;
 point.1 = 1, -7.85,  -9.2,  -11.8,   1600, 1, 1.5,  0,  0.63, 1.3, 0.85, 7, 7, 2, 216, 256, 1 ;
 point.2 = 1, -7.85,   9.2,  -11.8,   1600, 2, 1.5,  0,  0.63, 1.3, 0.85, 7, 7, 3, 216, 256, 1 ;
+
+
+
+
+
+
+
+
+
 point.3 = 2,   5.1, -14.9,    -10,   1600, 0,   0,  0,   0.3, 2.5,  0.6, 0, 0, 7,   0,   0, 1 ;
+
+
+
+
 point.4 = 2,   5.1,  14.9,    -10,   1600, 0,   0,  0,   0.3, 2.5,  0.6, 0, 0, 7,   0,   0, 1 ;
 point.5 = 2,  29.1,     0,   -6.3,   1600, 0,   0,  0,   0.5, 2.5,  0.5, 0, 0, 7,   0,   0, 1 ;
 point.6 = 2, -29.9,     0,   -6.3,   1600, 0,   0,  0,   0.5, 2.5,  0.5, 0, 0, 7,   0,   0, 1 ;
@@ -172,8 +203,8 @@ Pump.4 = Name:CenterTankPump2#Pressure:29#DestinationLine:PumpCenter2ToJuncRight
 Pump.5 = Name:LeftInnerTankPump2#Pressure:25#DestinationLine:PumpLeft2ToJuncLeft#TankFuelRequired:LeftInner#Type:Electric#Index:5
 Pump.6 = Name:RightInnerTankPump2#Pressure:25#DestinationLine:PumpRight2ToJuncRight#TankFuelRequired:RightInner#Type:Electric#Index:6
 Pump.7 = Name:APUPump#Pressure:5#DestinationLine:Pump6ToAPUValve#TankFuelRequired:LeftInner#Type:APUDriven
-Trigger.1 = Target:LeftInner#Threshold:120#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2
-Trigger.2 = Target:RightInner#Threshold:120#Condition:TankQuantityBelow#EffectTrue:OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
+Trigger.1 = Target:LeftInner#Threshold:120#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2,OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
+Trigger.2 = Target:RightInner#Threshold:120#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2,OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
 Trigger.3 = Condition:Autostart_Enabled#EffectTrue:OpenValve.LeftEngineValve,OpenValve.RightEngineValve,OpenValve.CrossFeedValve,OpenValve.APUValve,StartPump.CenterTankPump1,StartPump.LeftInnerTankPump1,StartPump.RightInnerTankPump1,StartPump.CenterTankPump2,StartPump.LeftInnerTankPump2,StartPump.RightInnerTankPump2,StartPump.APUPump
 Trigger.4 = Condition:Autoshutdown_Enabled#EffectTrue:CloseValve.LeftEngineValve,CloseValve.RightEngineValve,CloseValve.CrossFeedValve,CloseValve.APUValve,StopPump.CenterTankPump1,StopPump.LeftInnerTankPump1,StopPump.RightInnerTankPump1,StopPump.CenterTankPump2,StopPump.LeftInnerTankPump2,StopPump.RightInnerTankPump2
 Trigger.5 = Target:LeftInner#Threshold:226#Condition:TankQuantityBelow#EffectFalse:CloseValve.LeftTransferValve1,CloseValve.LeftTransferValve2
@@ -402,6 +433,7 @@ interactive_point.2 = 0.400000 , -34.000000 , 5.530000, -1.980000, 0 , 0.000000,
 interactive_point.3 = 0.400000 , 25.930000 , 5.530000, -1.980000, 0 , 0.000000, 0.000000, 86.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
 interactive_point.4 = 0.400000 , 20.200000 , 2.20000, -6.100000, 1 , 0.000000, 0.000000, 90.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
 interactive_point.5 = 0.400000 , -4.000000 , -6.000000, 0.000000, 2 , 0.000000, 0.000000, -90.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
+
 interactive_point.6 = 0.400000 , -4.000000 , 6.000000, 0.000000, 2 , 0.000000, 0.000000, 90.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
 interactive_point.7 = 0.330000 , 37.000000 , 5.30000, -5.100000, 4 , 0.000000, 0.000000, 45.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
 interactive_point.8 = 0.330000 , 0.000000 , -54.590000, -7.570000, 3 , 0.000000, 0.000000, -90.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
