--- a/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
@@ -14,11 +14,6 @@
 
 ;SSJ Modification note: Passenger weight is 85 kg
 
-
-
-
-
-
 [VERSION]
 major = 1
 minor = 0
@@ -27,7 +22,6 @@ minor = 0
 max_gross_weight = 109019 ; Empty weight, (LBS)
 empty_weight = 53460 ; Empty weight, (LBS)
 reference_datum_position = 5, 0, 4.92 ; Position of reference datum relative to FS(0,0,0) (FEET), z, x, y
-
 empty_weight_CG_position = -5.66, 0, -6 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y
 CG_forward_limit = 0.125 ; Gravity center forward limit (longitudinal offset) for longitudinal stability
 CG_aft_limit = 0.3 ; Gravity center after limit (longitudinal offset z) w.r.t reference datum for longitudinal stability (FEET)
@@ -37,17 +31,6 @@ empty_weight_yaw_MOI = 574932 ; Empty yaw moment of inertia, Jyy (SLUG SQ FEET)
 empty_weight_coupled_MOI = 1000 ; Empty transverse moment of inertia, Jyz (SLUG SQ FEET)
 activate_mach_limit_based_on_cg = 0 ; Activate mach limitation depending on CG position (true if > 0 /false othewise). Mostly for Concorde).
 activate_cg_limit_based_on_mach = 0 ; Activate cg limitation depending on mach value (true if > 0 /false othewise). Mostly for Concorde).
-
-
-
-
-
-
-
-
-
-
-
 max_number_of_stations = 10 ; Number of payload stations
 station_load.0 = 2155, 13.5, 0, 0, ECONOMY ROWS 1-5 (seats: 23 max: 4310lbs/1955kg), 0
 station_load.1 = 2342, 13.5, 0, 0, ECONOMY ROWS 6-10 (seats: 25 max: 4685lb/2125kg), 0
@@ -87,20 +70,7 @@ max_castering_angle = 1.0 ; Defines the maximum angle a free castering wheel can
 point.0 = 1, 28.95,     0,  -11.7,   1000, 0,   1, 40,  0.63, 1.3, 0.85, 4, 4, 0, 216, 256, 3 ;
 point.1 = 1, -7.85,  -9.2,  -11.8,   1600, 1, 1.5,  0,  0.63, 1.3, 0.85, 7, 7, 2, 216, 256, 1 ;
 point.2 = 1, -7.85,   9.2,  -11.8,   1600, 2, 1.5,  0,  0.63, 1.3, 0.85, 7, 7, 3, 216, 256, 1 ;
-
-
-
-
-
-
-
-
-
 point.3 = 2,   5.1, -14.9,    -10,   1600, 0,   0,  0,   0.3, 2.5,  0.6, 0, 0, 7,   0,   0, 1 ;
-
-
-
-
 point.4 = 2,   5.1,  14.9,    -10,   1600, 0,   0,  0,   0.3, 2.5,  0.6, 0, 0, 7,   0,   0, 1 ;
 point.5 = 2,  29.1,     0,   -6.3,   1600, 0,   0,  0,   0.5, 2.5,  0.5, 0, 0, 7,   0,   0, 1 ;
 point.6 = 2, -29.9,     0,   -6.3,   1600, 0,   0,  0,   0.5, 2.5,  0.5, 0, 0, 7,   0,   0, 1 ;
@@ -175,14 +145,14 @@ Line.23 = Name:Eng1ToTank2#Source:LeftEngine#Destination:LeftInner
 Line.24 = Name:Eng2ToTank3#Source:RightEngine#Destination:RightInner
 Line.25 = Name:EngValveLeftToEngLeft#Source:LeftEngineValve#Destination:LeftEngine
 Line.26 = Name:EngValveRightToEngRight#Source:RightEngineValve#Destination:RightEngine
-Line.27 = Name:Tank4ToXfer1#Source:LeftOuter#Destination:LeftTransferValve1#GravityBasedFuelFlow:500
-Line.28 = Name:Tank5ToXfer2#Source:RightOuter#Destination:RightTransferValve1#GravityBasedFuelFlow:500
-Line.29 = Name:Xfer1ToTank2#Source:LeftTransferValve1#Destination:LeftInner#GravityBasedFuelFlow:500
-Line.30 = Name:Xfer2ToTank3#Source:RightTransferValve1#Destination:RightInner#GravityBasedFuelFlow:500
-Line.31 = Name:Tank4ToXfer1_2#Source:LeftOuter#Destination:LeftTransferValve2#GravityBasedFuelFlow:500
-Line.32 = Name:Tank5ToXfer2_2#Source:RightOuter#Destination:RightTransferValve2#GravityBasedFuelFlow:500
-Line.33 = Name:Xfer1ToTank2_2#Source:LeftTransferValve2#Destination:LeftInner#GravityBasedFuelFlow:500
-Line.34 = Name:Xfer2ToTank3_2#Source:RightTransferValve2#Destination:RightInner#GravityBasedFuelFlow:500
+Line.27 = Name:Tank4ToXfer1#Source:LeftOuter#Destination:LeftTransferValve1#GravityBasedFuelFlow:300
+Line.28 = Name:Tank5ToXfer2#Source:RightOuter#Destination:RightTransferValve1#GravityBasedFuelFlow:300
+Line.29 = Name:Xfer1ToTank2#Source:LeftTransferValve1#Destination:LeftInner#GravityBasedFuelFlow:300
+Line.30 = Name:Xfer2ToTank3#Source:RightTransferValve1#Destination:RightInner#GravityBasedFuelFlow:300
+Line.31 = Name:Tank4ToXfer1_2#Source:LeftOuter#Destination:LeftTransferValve2#GravityBasedFuelFlow:300
+Line.32 = Name:Tank5ToXfer2_2#Source:RightOuter#Destination:RightTransferValve2#GravityBasedFuelFlow:300
+Line.33 = Name:Xfer1ToTank2_2#Source:LeftTransferValve2#Destination:LeftInner#GravityBasedFuelFlow:300
+Line.34 = Name:Xfer2ToTank3_2#Source:RightTransferValve2#Destination:RightInner#GravityBasedFuelFlow:300
 Junction.1 = Name:LeftJunction#InputOnlyLines:PumpLeft1ToJuncLeft,PumpLeft2ToJuncLeft#OutputOnlyLines:Junc1ToEngValveLeft,Junc1ToJuncAPU
 Junction.2 = Name:RightJunction#InputOnlyLines:PumpRight1ToJuncRight#OutputOnlyLines:Junc2ToEngValveRight
 Junction.3 = Name:CenterLeftJunction#InputOnlyLines:PumpCenterToJuncLeftCenter
@@ -207,8 +177,9 @@ Trigger.1 = Target:LeftInner#Threshold:120#Condition:TankQuantityBelow#EffectTru
 Trigger.2 = Target:RightInner#Threshold:120#Condition:TankQuantityBelow#EffectTrue:OpenValve.LeftTransferValve1,OpenValve.LeftTransferValve2,OpenValve.RightTransferValve1,OpenValve.RightTransferValve2
 Trigger.3 = Condition:Autostart_Enabled#EffectTrue:OpenValve.LeftEngineValve,OpenValve.RightEngineValve,OpenValve.CrossFeedValve,OpenValve.APUValve,StartPump.CenterTankPump1,StartPump.LeftInnerTankPump1,StartPump.RightInnerTankPump1,StartPump.CenterTankPump2,StartPump.LeftInnerTankPump2,StartPump.RightInnerTankPump2,StartPump.APUPump
 Trigger.4 = Condition:Autoshutdown_Enabled#EffectTrue:CloseValve.LeftEngineValve,CloseValve.RightEngineValve,CloseValve.CrossFeedValve,CloseValve.APUValve,StopPump.CenterTankPump1,StopPump.LeftInnerTankPump1,StopPump.RightInnerTankPump1,StopPump.CenterTankPump2,StopPump.LeftInnerTankPump2,StopPump.RightInnerTankPump2
-Trigger.5 = Target:LeftInner#Threshold:226#Condition:TankQuantityBelow#EffectFalse:CloseValve.LeftTransferValve1,CloseValve.LeftTransferValve2
-Trigger.6 = Target:RightInner#Threshold:226#Condition:TankQuantityBelow#EffectFalse:CloseValve.RightTransferValve1,CloseValve.RightTransferValve2
+Trigger.5 = Target:LeftInner#Threshold:240#Condition:TankQuantityBelow#EffectFalse:CloseValve.LeftTransferValve1,CloseValve.LeftTransferValve2
+Trigger.6 = Target:RightInner#Threshold:240#Condition:TankQuantityBelow#EffectFalse:CloseValve.RightTransferValve1,CloseValve.RightTransferValve2
+;;Trigger.7 = Target:Center#Threshold:1#Condition:TankQuantityBelow#EffectTrue:CloseValve.LeftTransferValve1,CloseValve.LeftTransferValve2,CloseValve.RightTransferValve1,CloseValve.RightTransferValve2;;,StopPump.CenterTankPump1,StopPump.CenterTankPump2
 
 [AIRPLANE_GEOMETRY]
 wing_area = 902 ; Wing area S (SQUARE FEET)
