--- a/PackageSources/SimObjects/Airplanes/SU95/systems.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/systems.cfg
@@ -219,9 +219,9 @@ lightdef.129 = Type:4#Index:9#LocalPosition:32.515,0.5,-0.761#LocalRotation:-102
 lightdef.130 = Type:4#Index:9#LocalPosition:32.430,0.42,-0.77#LocalRotation:-104,0,0#EffectFile:LIGHT_A32NX-SU95_EmissiveM#PotentiometerIndex:85         ; PED AMB M R
 
 ; DOME LT
-lightdef.131 = Type:10#Index:1#LocalPosition:29.8,-1.7,-3.78#LocalRotation:70,0,0#EffectFile:LIGHT_A32NX-SU95_CockpitSpotLarge#PotentiometerIndex:7        ; DOME LT CPT
+lightdef.131 = Type:10#Index:1#LocalPosition:29.8,-1.7,3.78#LocalRotation:70,0,0#EffectFile:LIGHT_A32NX-SU95_CockpitSpotLarge#PotentiometerIndex:7        ; DOME LT CPT
 lightdef.132 = Type:10#Index:1#LocalPosition:29.8,-1.0,-1.22#LocalRotation:270,500,0#EffectFile:LIGHT_A32NX-SU95_CockpitSpotLarge#PotentiometerIndex:7     ; DOME LT CPT AMB
-lightdef.133 = Type:10#Index:2#LocalPosition:29.8,1.7,-3.78#LocalRotation:70,0,0#EffectFile:LIGHT_A32NX-SU95_CockpitSpotLarge#PotentiometerIndex:7         ; DOME LT F/O
+lightdef.133 = Type:10#Index:2#LocalPosition:29.8,1.7,3.78#LocalRotation:70,0,0#EffectFile:LIGHT_A32NX-SU95_CockpitSpotLarge#PotentiometerIndex:7         ; DOME LT F/O
 lightdef.134 = Type:10#Index:2#LocalPosition:29.8,1.0,-1.22#LocalRotation:270,500,0#EffectFile:LIGHT_A32NX-SU95_CockpitSpotLarge#PotentiometerIndex:7      ; DOME LT F/O AMB
 
 ; PEDESTAL FLOOD LT
