--- a/PackageSources/SimObjects/Airplanes/SU95/panel/panel.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/panel/panel.cfg
@@ -123,6 +123,7 @@ pixel_size=1430,1000
 texture=$EFB
 
 htmlgauge00=A32NX_SU95/EFB/template.html, 0,0,1430,1000
+;; htmlgauge00=Test_instrument/test1/MyInstrument.html, 0,0,143,100
 
 [VCockpit17]
 size_mm=0,0
