--- a/PackageSources/SimObjects/Airplanes/SU95/model/model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/model/model.cfg
@@ -9,5 +9,5 @@ withInterior_forceFirstLod=true
 withInterior_showExterior=false
 
 [models]
-exterior=SSJ100.mdl
+exterior=su95.xml
 interior=SU95_internal.xml
