--- a/PackageSources/SimObjects/Airplanes/SU95/aircraft.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/aircraft.cfg
@@ -3,15 +3,15 @@ major = 1
 minor = 0
 
 [GENERAL]
-atc_type = "TT:ATCCOM.ATC_NAME SUKHOI1.0.text"
+atc_type = "TT:ATCCOM.ATC_NAME SUKHOI.0.text"
 atc_model = "TT:ATCCOM.AC_MODEL SU95.0.text"
 Category = "airplane"
-performance ="Velocidad de crucero:   477 nudos (885 km\/h)   \nMotores:   SAM-146 with 17,270 lbs max thrust   \nAlcance m?ximo:    2390 mn (4420 km)    \nTecho de servicio:    41000 pies (12500 m)    \nCapacidad de combustible:    3500 U.S. galons (10681 kg)    \nPeso en vac?o:    55000 lb (25000 kg)    \nPeso bruto m?ximo:    105000 lbs (47727 kg)    \nLargo:   98,23 pies (29,94 m)    \nEnvergadura:    91,20 pies (27,8 m)    \nAlto:    33,73 pies (10,28 m)    \nPlazas:    Asientos 98 (Standard single class)    \nCapacidad de carga:    775,8 pies3 (21,97 m3)"
+performance ="Maximum speed\nMach0.81 (477 kn) \n\nRange\n7,2472nm (4578km)\n\nCeilling\n41000ft (12500m)\n\nEngine\nSAM-146"
 editable = 1
 wip_indicator = 2
 icao_type_designator = "SU95"
 icao_manufacturer = "SUKHOI"
-icao_model = "SU95"
+icao_model = "Superjet 100-95"
 icao_engine_type = "Jet"
 icao_engine_count = 2
 icao_WTC = "M"
@@ -67,100 +67,34 @@ timer_trigger = 1.0 ; Duration (in Sec) the alpha must be above on_limit before 
 ;===================== FLTSIM =====================
 
 [FLTSIM.0]
-Title="Sukhoi SuperJet 100 (RRJ-95LR) Aeroproyecto"
+Title="Sukhoi SuperJet 100 EAS White Base"
 Model=""
 Panel=""
 Sound=""
-Texture="aero"
+Texture=""
 KB_Checklists="Boeing747-400_check"
 KB_Reference="Boeing747-400_ref"
-description="SUKHOI SuperJet 100 R2.0 Freeware \nAEROPROYECTO 1999-2017 \nBy Edgar Guinart L?pez\nhttp: \s aeroproyecto.freetzi.com"
+description="Sukhoi SuperJet 100 EAS White Base"
 wip_indicator=2
-ui_manufacturer="AEROPROYECTO"
+ui_manufacturer="Sukhoi (Eastern Aviation Simulations)"
 ui_type="Sukhoi SuperJet 100 (RRJ-95LR)"
-ui_variation="Aeroproyecto"
+ui_variation="White"
 ui_typerole="Commercial Airliner"
-ui_createdby="Aeroproyecto"
+ui_createdby="EAS - Eastern Aviation Simulations"
 ui_thumbnailfile=""
 ui_certified_ceiling=40000
 ui_max_range=2472
 ui_autonomy=4
 ui_fuel_burn_rate=-1
-atc_id="CU-T733"
+atc_id="RA9006"
 icao_airline=""
 atc_id_enable=1
-atc_airline=""
+atc_airline="SU-CRAFT"
 atc_flight_number=""
 atc_heavy=0
 atc_id_color="0x00000000"
 atc_id_font=""
 isAirTraffic=0
 isUserSelectable=1
-atc_parking_types=""
-atc_parking_codes=""
-
-[FLTSIM.1]
-Title="Sukhoi SuperJet 100 (RRJ-95LR) Interjet"
-Model=""
-Panel=""
-Sound=""
-Texture="interjet"
-KB_Checklists="Boeing747-400_check"
-KB_Reference="Boeing747-400_ref"
-description="SUKHOI SuperJet 100 R2.0 Freeware \nAEROPROYECTO 1999-2017 \nBy Edgar Guinart L?pez\nhttp: \s aeroproyecto.freetzi.com"
-wip_indicator=2
-ui_manufacturer="AEROPROYECTO"
-ui_type="Sukhoi SuperJet 100 (RRJ-95LR)"
-ui_variation="Interjet"
-ui_typerole="Commercial Airliner"
-ui_createdby="Aeroproyecto"
-ui_thumbnailfile=""
-ui_certified_ceiling=40000
-ui_max_range=2472
-ui_autonomy=4
-ui_fuel_burn_rate=-1
-atc_id="AX-A00"
-icao_airline=""
-atc_id_enable=1
-atc_airline=""
-atc_flight_number=""
-atc_heavy=0
-atc_id_color="0x00000000"
-atc_id_font=""
-isAirTraffic=0
-isUserSelectable=1
-atc_parking_types=""
-atc_parking_codes=""
-
-[FLTSIM.2]
-Title="Sukhoi SuperJet 100 (RRJ-95LR) Aeroflot"
-Model=""
-Panel=""
-Sound=""
-Texture="aeroflot"
-KB_Checklists="Boeing747-400_check"
-KB_Reference="Boeing747-400_ref"
-description="SUKHOI SuperJet 100 R2.0 Freeware \nAEROPROYECTO 1999-2017 \nBy Edgar Guinart L?pez\nhttp: \s aeroproyecto.freetzi.com"
-wip_indicator=2
-ui_manufacturer="AEROPROYECTO"
-ui_type="Sukhoi SuperJet 100 (RRJ-95LR)"
-ui_variation="Aeroflot"
-ui_typerole="Commercial Airliner"
-ui_createdby="Aeroproyecto"
-ui_thumbnailfile=""
-ui_certified_ceiling=40000
-ui_max_range=2472
-ui_autonomy=4
-ui_fuel_burn_rate=-1
-atc_id="RA-89001"
-icao_airline=""
-atc_id_enable=1
-atc_airline=""
-atc_flight_number=""
-atc_heavy=0
-atc_id_color="0x00000000"
-atc_id_font=""
-isAirTraffic=0
-isUserSelectable=1
-atc_parking_types=""
-atc_parking_codes=""
+atc_parking_types="GATE,RAMP"
+atc_parking_codes="SDB"
