Change wing nav light and nose light tonodes

--- a/PackageSources/SimObjects/Airplanes/SU95/systems.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/systems.cfg
@@ -61,10 +61,10 @@ minor = 0
 ; EXTERIOR LIGHTING
 
 ; NAV LT (done)
-lightdef.0 = Type:3#Index:1#LocalPosition:-16.75,-44.92,0.51#LocalRotation:0,0,-5#EffectFile:LIGHT_A32NX-SU95_NavigationRed#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_NavigationRed                  ; NAV L RED
-lightdef.1 = Type:3#Index:2#LocalPosition:-16.75,44.92,0.51#LocalRotation:0,0,5#EffectFile:LIGHT_A32NX-SU95_NavigationGreen#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_NavigationGreen                ; NAV R GREEN
-lightdef.2 = Type:3#Index:3#LocalPosition:-21.06,-45.77,0.55#LocalRotation:0,0,180#EffectFile:LIGHT_A32NX-SU95_NavigationWhite#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_NavigationTailRight         ; NAV TAIL R WHITE
-lightdef.3 = Type:3#Index:4#LocalPosition:-21.06,45.77,0.55#LocalRotation:0,0,180#EffectFile:LIGHT_A32NX-SU95_NavigationWhite#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_NavigationTailLeft           ; NAV TAIL L WHITE
+lightdef.0 = Type:3#Index:1#LocalPosition:0.0,0.0,0.0#LocalRotation:0,0,-5#EffectFile:LIGHT_A32NX-SU95_NavigationRed#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_NavigationRed#Node:fx_nav_red                    ; NAV L RED
+lightdef.1 = Type:3#Index:2#LocalPosition:0.0,0.0,0.0#LocalRotation:0,0,5#EffectFile:LIGHT_A32NX-SU95_NavigationGreen#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_NavigationGreen#Node:fx_nav_green               ; NAV R GREEN
+lightdef.2 = Type:3#Index:3#LocalPosition:0.0,0.0,0.0#LocalRotation:0,0,180#EffectFile:LIGHT_A32NX-SU95_NavigationWhite#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_NavigationTailRight#Node:fx_nav_right         ; NAV TAIL R WHITE
+lightdef.3 = Type:3#Index:4#LocalPosition:0.0,0.0,0.0#LocalRotation:0,0,180#EffectFile:LIGHT_A32NX-SU95_NavigationWhite#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_NavigationTailLeft#Node:fx_nav_left           ; NAV TAIL L WHITE
 
 ; BEACON LT
 lightdef.4 = Type:1#Index:1#LocalPosition:-1.25,0.15,5.9#LocalRotation:-15,10,-98#EffectFile:LIGHT_A32NX-SU95_BeaconTop_Wing#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconTop          ; TOP R WING
@@ -101,14 +101,14 @@ lightdef.29 = Type:9#Index:2#LocalPosition:-50.5,6.3,3.0#LocalRotation:-60,0,10#
 lightdef.30 = Type:9#Index:2#LocalPosition:-50.75,6.3,2.75#LocalRotation:0,0,0#EffectFile:LIGHT_A32NX-SU95_LogoLightAmbient#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_LogoRight                   ; LOGO R AMB
 
 ; TAXI/T/O LT (done)
-lightdef.31 = Type:6#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:5,0,0#EffectFile:LIGHT_A32NX-SU95_TaxiLarge#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Taxi                                  ; TAXI LT
-lightdef.32 = Type:6#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:5,0,0#EffectFile:LIGHT_A32NX-SU95_TaxiLargeVol#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Taxi                               ; TAXI LT VOL
-lightdef.33 = Type:6#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:0,0,0#EffectFile:LIGHT_A32NX-SU95_RunwayTurnOffAmbient#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Taxi                                ; TAXI LT AMB
+lightdef.31 = Type:6#Index:1#LocalPosition:0.0,0.0,0.0#LocalRotation:5,0,0#EffectFile:LIGHT_A32NX-SU95_TaxiLarge#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Taxi#Node:fx_nose_light_left_out                                  ; TAXI LT
+lightdef.32 = Type:6#Index:1#LocalPosition:0.0,0.0,0.0#LocalRotation:5,0,0#EffectFile:LIGHT_A32NX-SU95_TaxiLargeVol#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Taxi#Node:fx_nose_light_left_out                               ; TAXI LT VOL
+lightdef.33 = Type:6#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:0,0,0#EffectFile:LIGHT_A32NX-SU95_RunwayTurnOffAmbient#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Taxi                       ; TAXI LT AMB
 lightdef.34 = Type:6#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:45,0,0#EffectFile:LIGHT_A32NX-SU95_TaxiTOAmbientGnd#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Taxi                          ; TAXI LT AMB GND
 lightdef.35 = Type:6#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:0,0,0#EffectFile:LIGHT_A32NX-SU95_DaylightGlare#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Taxi                              ; TAXI LT AMB DAY
-lightdef.36 = Type:5#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:5,0,0#EffectFile:LIGHT_A32NX-SU95_TakeOff#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_TakeOff                                 ; T/O LT
-lightdef.37 = Type:5#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:-2,0,0#EffectFile:LIGHT_A32NX-SU95_TakeOffVol#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_TakeOff                             ; T/O LT VOL
-lightdef.38 = Type:5#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:0,0,0#EffectFile:LIGHT_A32NX-SU95_RunwayTurnOffAmbient#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_TakeOff                          ; T/O LT AMB
+lightdef.36 = Type:5#Index:1#LocalPosition:0.0,0.0,0.0#LocalRotation:5,0,0#EffectFile:LIGHT_A32NX-SU95_TakeOff#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_TakeOff#Node:fx_nose_light_right_out                                 ; T/O LT
+lightdef.37 = Type:5#Index:1#LocalPosition:0.0,0.0,0.0#LocalRotation:-2,0,0#EffectFile:LIGHT_A32NX-SU95_TakeOffVol#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_TakeOff#Node:fx_nose_light_right_out                             ; T/O LT VOL
+lightdef.38 = Type:5#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:0,0,0#EffectFile:LIGHT_A32NX-SU95_RunwayTurnOffAmbient#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_TakeOff                    ; T/O LT AMB
 lightdef.39 = Type:5#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:40,0,0#EffectFile:LIGHT_A32NX-SU95_TaxiTOAmbientGnd#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_TakeOff                       ; T/O LT AMB GND
 lightdef.40 = Type:5#Index:1#LocalPosition:29.5,0.0,-8.5#LocalRotation:0,0,0#EffectFile:LIGHT_A32NX-SU95_DaylightGlare#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_TakeOff                           ; T/O LT AMB DAY
 
