--- a/PackageSources/SimObjects/Airplanes/SU95/texture/texture.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/texture/texture.cfg
@@ -7,5 +7,4 @@ fallback.4=..\..\..\..\texture\Glass
 fallback.5=..\..\..\..\texture\Interiors
 fallback.6=..\..\..\..\texture
 fallback.7=..\texture
-fallback.8=..\..\SU95\texture.A32NX_stable
-fallback.9=..\..\Asobo_A320_NEO\texture
+fallback.8=..\texture.A32NX_Stable
