--- a/manifest-base.json
+++ b/manifest-base.json
@@ -1,5 +1,5 @@
 {
-  "creator": "FlyByWire Simulations",
+  "creator": "Eastern Aviation Simulations",
   "release_notes": {
     "neutral": {
       "LastUpdate": "",
@@ -8,14 +8,6 @@
   },
   "title": "SU95",
   "dependencies": [
-    {
-      "package_version": "0.1.100",
-      "name": "asobo-aircraft-a320-neo"
-    },
-    {
-      "package_version": "0.1.128",
-      "name": "asobo-vcockpits-instruments-a320-neo"
-    },
     {
       "package_version": "0.1.129",
       "name": "asobo-vcockpits-instruments-airliners"
@@ -26,6 +18,6 @@
     }
   ],
   "content_type": "AIRCRAFT",
-  "minimum_game_version": "1.21.13",
-  "manufacturer": "Airbus"
+  "minimum_game_version": "1.26.5",
+  "manufacturer": "Sukhoi"
 }
