--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ SSJ_test1
 !/PackageSources/SimObjects/AirPlanes/SU95/texture/A320NEO_COCKPIT_INPUTS02_ALBD.PNG.DDS.json
 !/PackageSources/SimObjects/AirPlanes/SU95/texture/A320NEO_COCKPIT_MAINPANEL_ALBD.PNG.dds
 !/PackageSources/SimObjects/AirPlanes/SU95/texture/A320NEO_COCKPIT_MAINPANEL_ALBD.PNG.DDS.json
+/PackageSources/ModelBehaviorDefs/SU95/generated
