Hide external brake light

--- a/PackageSources/SimObjects/Airplanes/SU95/systems.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/systems.cfg
@@ -145,8 +145,8 @@ lightdef.66 = Type:8#Index:2#LocalPosition:15.57,6.5,4.58#LocalRotation:2,0,-145
 lightdef.67 = Type:8#Index:2#LocalPosition:15.57,6.5,4.58#LocalRotation:2,0,-145#EffectFile:LIGHT_A32NX-SU95_WingLargeVol#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_WingRight  ; WING LT R VOL
 
 ; PARK BRK LT EXT
-lightdef.68 = Type:7#Index:1#LocalPosition:27.95,0.252,-4.508#LocalRotation:2,0,180#EffectFile:LIGHT_A32NX-SU95_ParkBrkLight#PotentiometerIndex:99         ; PARK BRK LT EXT
-lightdef.69 = Type:7#Index:1#LocalPosition:28.23,0.242,-4.501#LocalRotation:2,0,180#EffectFile:LIGHT_A32NX-SU95_ParkBrkLightAmbient#PotentiometerIndex:99  ; PARK BRK LT EXT AMB
+lightdef.68 = Type:7#Index:1#LocalPosition:0,0,0#LocalRotation:2,0,180#EffectFile:LIGHT_A32NX-SU95_ParkBrkLight#PotentiometerIndex:99         ; PARK BRK LT EXT
+lightdef.69 = Type:7#Index:1#LocalPosition:0,0,0#LocalRotation:2,0,180#EffectFile:LIGHT_A32NX-SU95_ParkBrkLightAmbient#PotentiometerIndex:99  ; PARK BRK LT EXT AMB
 
 ; INTERIOR LIGHTING ;;;;;;-Shift interior light by -5,0,-4.92
 
