Update flight_model and panel

--- a/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
+++ b/PackageSources/SimObjects/Airplanes/SU95/flight_model.cfg
@@ -220,7 +220,8 @@ aileron_up_limit = 25 ; Aileron max deflection  angle (DEGREES) Real value is 25
 aileron_down_limit = 25 ; Aileron max deflection down angle (absolute value) (DEGREES) Real value is 25
 rudder_limit = 25 ; Rudder max deflection angle (absolute value) (DEGREES)
 rudder_trim_limit = 20 ; Rudder trim max deflection angle (absolute value) (DEGREES)
-elevator_trim_limit = 13.5 ; Elevator trim max angle (absolute value) (DEGREES)
+elevator_trim_up_limit = 13.5 ; Elevator trim max angle nose up direction (absolute value) (DEGREES)
+elevator_trim_down_limit = 4 ; Elevator trim max angle nose down direction (absolute value) (DEGREES)				 
 spoiler_limit = 35 ; Spoiler max deflection angle when on the ground (absolute value) (DEGREES)
 air_spoiler_limit = 35 ; Spoiler max deflection angle when in the air (absolute value) (DEGREES)
 spoilerons_available = 0 ; Aircraft has spoilerons true/false
@@ -241,10 +242,10 @@ elevator_trim_neutral = 0 ; Elevator trim max angle (absolute value) (DEGREES), 
 aileron_to_rudder_scale = 0 ; non-dimensional
 flap_to_aileron_scale = 0 ; non-dimensional
 fly_by_wire = 0 ; Fly-by-wire available true/false
-elevator_elasticity_table = 0:1, 90:1, 200:0.5, 400:0.33
-aileron_elasticity_table = 0:1, 90:1, 200:1, 400:0.8
+elevator_elasticity_table = 0:1, 400:1
+aileron_elasticity_table = 0:1, 400:1
 rudder_elasticity_table = 0:1, 85:0.9, 110:0.63, 445:0.122
-elevator_trim_elasticity_table = 0:1, 120:1, 200:0.66, 400:0.33
+elevator_trim_elasticity_table = 0:0.3, 100:0.35, 120:1, 400:1
 ;controls_reactivity_scalar = 1 ; Reactivity scalar for all controls
 
 [AERODYNAMICS]
