--- a/PackageSources/SimObjects/AirPlanes/SU95/flight_model.cfg
+++ b/PackageSources/SimObjects/AirPlanes/SU95/flight_model.cfg
@@ -221,7 +221,7 @@ aileron_down_limit = 25 ; Aileron max deflection down angle (absolute value) (DE
 rudder_limit = 25 ; Rudder max deflection angle (absolute value) (DEGREES)
 rudder_trim_limit = 20 ; Rudder trim max deflection angle (absolute value) (DEGREES)
 elevator_trim_up_limit = 13.5 ; Elevator trim max angle nose up direction (absolute value) (DEGREES)
-elevator_trim_down_limit = 4 ; Elevator trim max angle nose down direction (absolute value) (DEGREES)				 
+elevator_trim_down_limit = 4 ; Elevator trim max angle nose down direction (absolute value) (DEGREES)
 spoiler_limit = 35 ; Spoiler max deflection angle when on the ground (absolute value) (DEGREES)
 air_spoiler_limit = 35 ; Spoiler max deflection angle when in the air (absolute value) (DEGREES)
 spoilerons_available = 0 ; Aircraft has spoilerons true/false
@@ -402,7 +402,7 @@ best_glide = 215 ; Best Glide (Kts)
 max_gear_extended = 280 ; (Kts)
 
 [INTERACTIVE POINTS]
-number_of_interactive_points = 9 ;
+number_of_interactive_points = 10 ;
 interactive_point.0 = 0.400000 , 23.930000 , -5.530000, -1.980000, 0 , 0.000000, 0.000000, -86.000000 , 72.000000, 16.000000, 85.000000, 3.000000, -2.000000, 33.000000 ;
 interactive_point.1 = 0.400000 , -34.000000 , -5.530000, -1.980000, 0 , 0.000000, 0.000000,-103.000000 , 85.000000, 3.000000, 72.000000, 16.000000, -2.000000, 33.000000 ;
 interactive_point.2 = 0.400000 , -34.000000 , 5.530000, -1.980000, 0 , 0.000000, 0.000000, 103.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
@@ -413,6 +413,7 @@ interactive_point.5 = 0.400000 , -4.000000 , -6.000000, 0.000000, 2 , 0.000000, 
 interactive_point.6 = 0.400000 , -4.000000 , 6.000000, 0.000000, 2 , 0.000000, 0.000000, 90.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
 interactive_point.7 = 0.330000 , 37.000000 , 5.30000, -5.100000, 4 , 0.000000, 0.000000, 45.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
 interactive_point.8 = 0.330000 , 0.000000 , -54.590000, -7.570000, 3 , 0.000000, 0.000000, -90.000000 , 0.000000, 0.000000, 0.000000, 0.000000, 0.000000, 0.000000 ;
+interactive_point.9 = 0, 0, -54.59, -7.57, 3, 0, 0, -90, 0, 0, 0, 0, 0, 0
 
 [STALL PROTECTION]
 stall_protection = 1	    ; Alpha Protection
